Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <a href="https://docs.google.com/spreadsheets/d/1-eMzfI3PCEcPC-hVKjlqWCrEhcjiFi7CX-xXkg_Fy2o/edit?gid=528233429#gid=528233429" target="_blank">
         <div class="card" style="border-left-color: #3182ce;">
           <div class="card-title">PGM Acacio</div>
-          <div class="card-info">Apresentação do PGM</div>
+          <div class="card-info">Apresentação da PGM</div>
         </div>
       </a>
 
@@ -202,6 +202,13 @@
   <div class="card-title">🎙️ Transcritor de Áudio</div>
   <div class="card-info">Transcreva reuniões ou áudios do sistema</div>
 </div>
+
+       <a href="https://docs.google.com/document/d/18wGuusNhwuT8iRL_eivd74F6EtGCQEP2WAY8X3P0-nM/edit?tab=t.0#heading=h.1np2j5tul8j7" target="_blank">
+        <div class="card" style="border-left-color: #3182ce;">
+        <div class="card-title">Paybook Closer - Consultoria</div>
+        <div class="card-info">Script completo da Apresentação da Consultoria</div>
+        </div>
+      </a>
 
            
     </div>
@@ -379,3 +386,4 @@ window.onclick = function(event) {
 
 </body>
 </html>
+
